hphp/test/zend/good/tests/classes/constants_error_005.php.expectf

Fatal error: Invalid expression in constant initializer in %s/constants_error_005.php on line 4
